[package]
name = "twitter-rs"
version = "0.1.0"
authors = ["2vg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
base64 = "0.11.0"
rust-crypto = "0.2.36"
serde_json = "1.0.41"
time = "0.1.42"
rand = "0.7.2"
ureq = "0.11.2"
